# RecruiterAssistant

./: app.py  embedding.py  excel_logger.py  file_reader.py  llm.py  main.py  prompts.py  pyproject.toml  rag.py  rag_logs.xlsx  requirements.txt  vectorstore.py
VectorStore/: chroma.sqlite3
my_resume/: chaitanya_resume.docx
pages/: Analyse_Resume.py  Ask_Chaitanya.py
